deployment/product-service/green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-green
  namespace: product-service
  labels:
    app: product-service
    environment: green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: product-service
      environment: green
  template:
    metadata:
      labels:
        app: product-service
        environment: green
    spec:
      containers:
      - name: product-service
        image: binamin/product-service:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "256Mi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /readiness
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 5
