deployment/product-service/service.yaml
# Service to route traffic to either blue or green environment

apiVersion: v1
kind: Service
metadata:
  name: product-s-service
  namespace: product-service
spec:
  selector:
      app: product-service
      environment: blue # initially routes to blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
