deployment/product-service/ingress.yaml
# ingress to expose the application
#  Ingress resource that exposes the product service to external traffic. 

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress
  namespace: product-service
spec:
  rules:
  - host: product-service.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: product-s-service
            port:
              number: 80
